Minor adjustments in the fact blocks.

--- a/6-components/_components.facts-block.scss
+++ b/6-components/_components.facts-block.scss
@@ -37,7 +37,8 @@
             position: relative; top: -.05em;
         }
 
-    .fees-fact {
+        .fees-fact {
+            display: block;
             width: 80%;
             clear: both;
 
@@ -76,27 +77,41 @@
                 @include make-table-column ( .5 );
             }
         }
-    }
 
-    .fact__list {
+        .fact__list {
 
-        .tags {
-            margin-left: .7em;
-            &.ico:before {
-                font-size: 100%;
-                margin-right: 0;
+            .tags {
+                margin-left: .7em;
+                &.ico:before {
+                    font-size: 100%;
+                    margin-right: 0;
+                }
+            }
+
+            .collapsible__control {
+                font-size: 90%;
+                padding-top: 0;
+
+                @include media( $desktop-and-bigger ) {
+                    text-align: left;
+
+                    & > a { padding-left: 0; }
+                }
             }
         }
 
-        .collapsible__control {
-            font-size: 90%;
-            padding-top: 0;
+        .fact__row {
+            display: block;
 
-            @include media( $desktop-and-bigger ) {
-                text-align: left;
-
-                & > a { padding-left: 0; }
+            // TODO: Refactor
+            .title, .note {
+                display: inline-block;
+                padding-top: 0;
+                vertical-align: top;
             }
+
+            .note { padding-top: .1em;}
+            .title { margin-right: .4em; }
         }
     }
 }
