--- a/5-objects/_objects.typography.scss
+++ b/5-objects/_objects.typography.scss
@@ -42,6 +42,18 @@
                 margin-right: .9em;
             }
         }
+
+        .tags {
+            margin-left: .35em;
+            line-height: 1;
+            white-space: nowrap;
+
+            &,
+            &.ico:before,
+            .tag {
+                display: inline;
+            }
+        }
     }
 
     ol {
