Adds break after 'contact cards' block.

--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -228,3 +228,8 @@ $collapsible-transparency-height: 2.5em;
     .expanded > & {
     }
 }
+
+/** Contact card(s). */
+.contact-cards {
+    @include clearfix;
+}
