--- a/1-settings/_settings.colours.scss
+++ b/1-settings/_settings.colours.scss
@@ -68,6 +68,12 @@ $black-tundora:        #444;
 
 
 
+// Other Highlights
+$blue-humming-bird: #E4F3FB;
+
+
+
+
 //===================
 
 // NEW GREYS
