--- a/6-components/_components.layout.scss
+++ b/6-components/_components.layout.scss
@@ -5,7 +5,7 @@
 
 /* ===== RESPONSIVE VIEW WRAPPERS =========================================== */
 
-.view-large, .dialog {
+.view-large, .dialog, .popup {
     font-size: em( 18px);
     @include media( $tablet) {
         font-size: em( 18px );
