--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -207,7 +207,7 @@ $collapsible-transparency-height: 2.5em;
             top: -$collapsible-transparency-height;
             display: block;
             @include size( 100% $collapsible-transparency-height );
-            background: linear-gradient( transparent 0%, white 100% );
+            background: linear-gradient( rgba( 255, 255, 255, 0 ) 0%, white 100% );
             content: "";
         }
     }
@@ -304,3 +304,67 @@ $contact-portrait-size: 150px;
     }
 }
 
+/** General fixed popup. */
+
+$popup-width:    290px;
+$popup-z-index:  9999;
+$popup-border:   #fff;
+
+/* Pop-up box. */
+.popup-positioner {
+    display: none;
+    z-index: $popup-z-index;
+    position: fixed; bottom: 0;
+    margin: 0 0 0 5%;
+    width: $popup-width;
+
+    &.show { display: block; }
+}
+
+.popup {
+    padding: $base-margin;
+    border: 1px solid $popup-border;
+    background-color: $grey-gallery;
+    box-shadow: 0 0 7px rgba( #000, .35 );
+
+    & > header
+    {
+        font-size: 90%;
+
+        .caption {}
+
+        // 'x' button
+        .btn-close
+        {
+            color: $grey-mako;
+            opacity: .4;
+            display: block;
+            float: right;
+            margin-left: .5em;
+            font-size: 170%;
+            line-height: 1.3;
+
+            @include hoverify {
+                opacity: 1;
+            }
+        }
+    }
+
+    .body { font-size: 90%; }
+
+    .btn-holder {
+        .btn { margin: 0; }
+    }
+}
+
+@include media ( $mobile-large-and-smaller ) {
+    .popup-positioner {
+        margin: 0;
+        width: 100%
+    }
+
+    .popup { margin: 0; }
+}
+
+    // Feedback popup
+    .feedback {}
