--- a/6-components/_components.facts-block.scss
+++ b/6-components/_components.facts-block.scss
@@ -78,6 +78,11 @@
             @include media( $tablet-and-bigger ) {
                 @include make-table-column ( .5 );
             }
+
+            .appendix {
+                margin: .5em 0 .3em;
+                line-height: 1.2;
+            }
         }
 
         .fact__list {
