--- a/5-objects/_objects.lists.scss
+++ b/5-objects/_objects.lists.scss
@@ -14,7 +14,7 @@ $grid-list-items-per-row:   3;
 
     position: relative;
     @include clearfix();
-    margin: $base-margin 0;
+    margin: 0;
     width: 100%;
 
     // Item / Cell
