--- a/6-components/_components.facts-block.scss
+++ b/6-components/_components.facts-block.scss
@@ -5,58 +5,59 @@
 // TODO: Refactor!
 .facts-block {
     .facts-wrap {
-
         .intro-fact {
             @include outer-container;
             margin-bottom: .8em;
         }
-
         .ico-wrap {
             position: relative;
             margin-bottom: .5em;
             padding-left: 2.75em;
-
-            h4 { margin: 0; }
+            h4 {
+                margin: 0;
+            }
             p {
                 font-size: .9em;
                 padding-top: .3em;
             }
-
             > .ico {
-                position: absolute; top: 0; left: 0;
+                position: absolute;
+                top: 0;
+                left: 0;
                 margin-right: 1.5em;
                 width: 50px;
                 font-size: 1.9em;
-
-                &:before { vertical-align: top; }
+                &:before {
+                    vertical-align: top;
+                }
             }
         }
-
         .tooltip-icon {
             font-size: 115%;
-            position: relative; top: -.05em;
+            position: relative;
+            top: -.05em;
         }
-
-    .fees-fact {
+        .fees-fact {
             width: 80%;
             clear: both;
-
-            @include media( $tablet-and-smaller ) {
+            @include media( $tablet-and-smaller) {
                 width: 100%;
             }
-
-            h4 { font-weight: bold; }
-
+            h4 {
+                font-weight: bold;
+            }
             header {
-                h4, p { display: inline-block; }
-
+                h4,
+                p {
+                    display: inline-block;
+                }
                 .note {
                     display: inline;
-                    margin: 0; padding: 0;
+                    margin: 0;
+                    padding: 0;
                     font-weight: $weight-light;
                 }
             }
-
             .rate {
                 .note {
                     padding: 0;
@@ -64,27 +65,30 @@
                     color: #777;
                     line-height: 1.2;
                 }
-
-                .form { margin: .3em 0; }
+                .form {
+                    margin: .3em 0;
+                }
             }
         }
-
         .fact {
+            h2 {
+                
+            }
             @extend .fees-fact;
-
-            @include media( $tablet-and-bigger ) {
-                @include make-table-column ( .5 );
+            @include media( $tablet-and-bigger) {
+                @include make-table-column ( .5);
             }
         }
     }
-
     .fact__list {
-
         .tag {
             font-size: 90%;
             margin: 0 .2em;
             color: $grey-dusty-gray;
             font-weight: $weight-light;
         }
+    }
+    .last-fact {
+        padding-top: 1.5em;
     }
 }
