--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -13,6 +13,7 @@ $fun-fact-bg-color: $grey-gallery;
     margin-bottom: 0;
     font-size: 3.2em;
     line-height: 1;
+    color: $grey-mako;
     text-align: right;
 }
 
